--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,320 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.welcome{
+  text-align: center;
+  justify-content: center;
+
+}
+
+
+.boards{
+  text-align: center;
+  display: flex;
+  gap: 50px;
+
+}
+
+.outboard{
+  height: 400px;
+  width: 400px;
+
+  background-color: rgb(210, 127, 255);
+}
+
+.inboard{
+  height: 400px;
+  width: 400px;
+
+  background-color: rgb(210, 127, 255);
+}
+
+.outboard-text{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.inboard-text{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.shared-hover-effect {
+  transition: all 0.1s ease;
+}
+
+.shared-hover-effect:hover {
+  background-color: rgb(138, 0, 192); 
+}
+
+.profile-effect{
+  background-color: rgb(138, 0, 192); 
+}
+
+.profile-effect:hover{
+  background-color: white; 
+  color: rgb(138, 0, 192); 
+}
+
+.shared-hover-effect:hover .username-welcome{
+  color: rgb(138, 0, 192); 
+  background-color: white;
+}
+
+.logs{
+  display: flex;
+  gap: 20px;
+}
+
+.login{
+  transition: all 0.1s ease;
+}
+
+.login:hover{
+  background-color: rgb(138, 0, 192); 
+}
+
+.register{
+  transition: all 0.1s ease;
+}
+
+.register:hover{
+  background-color: rgb(138, 0, 192); 
+}
+
+.inputBox{
+  border-bottom: 1px solid rgb(138, 0, 192);
+  padding: 1rem;
+  border-radius: 1rem;
+  background: #050505;
+  transition: 0.3s;
+}
+
+.inputBoxNew{
+  border-bottom: 1px solid yellow;
+  padding: 0.1rem;
+  background: #050505;
+  transition: 0.3s;
+}
+
+.inputContainer{
+  display: flex;
+  flex-direction: column;
+}
+
+.inputBox:hover {
+  outline-color: #4b4b4b;
+  background: #414141;
+  transition: 0.3s;
+  width: 100%;
+ }
+
+ .loader {
+  border: 16px solid #d7d7d7; 
+  border-top: 16px solid rgb(138, 0, 192);
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+
+}
+
+.title {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr; 
+  align-items: center; 
+  justify-items: center; 
+}
+
+.right-column {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-end;
+  justify-content: flex-end; 
+  padding-right: 20px; 
+}
+
+.add-materials {
+  display: inline-block;
+  transition: transform 0.2s ease-in-out; 
+}
+
+.add-materials:hover {
+  transform: scale(1.2);
+}
+
+.button-add:hover .request-text {
+
+  background-color: rgb(246, 255, 0);
+  color: rgb(138, 0, 192);
+}
+
+.error-message {
+  color: red;
+  font-size: 14px;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+
+.inputNew {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; 
+  opacity: 0;
+  transform: translateX(-10%);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.inputNew.active {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.inputNew.exit {
+  opacity: 0;
+  transform: translateX(10%);
+}
+
+.select,
+.inputBoxNew {
+  width: 100%; 
+  padding: 0.5rem;
+  border: none;
+  border-bottom: 2px solid yellow;
+  background-color: #050505;
+  color: white;
+  outline: none;
+  text-align: left;
+  transition: transform 0.5s ease-in-out; 
+}
+
+.first-button{
+  display: grid;
+  grid-template-columns: 6fr 1fr; 
+}
+
+.normal-button{
+
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr; 
+
+}
+
+
+.inboard, .outboard{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr); 
+    grid-auto-rows: 32px;
+    gap: 4px; 
+
+}
+
+.material-icon-wrapper {
+  position: relative;
+  height: 32px;
+  margin: 0;
+}
+
+.material-icon{
+  position: relative;
+  cursor: pointer;
+}
+
+.material-icon > .accept{
+
+  opacity: 0; 
+  visibility: hidden; 
+  position: absolute;
+  top: calc(100% + 110px);
+  left: 50%;
+  transform: translateX(-50%) scale(0.9); 
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, visibility 0.2s ease-in-out;
+  background-color: #A64DFF;
+  color: white;
+  padding: 8px;
+  border-radius: 4px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+  white-space: nowrap;
+
+}
+
+.accept:hover{
+  color: black;
+  background-color: A64DFF;
+}
+
+.material-icon:hover > .accept{
+
+  opacity: 1; 
+  visibility: visible; 
+  
+}
+.material-icon > .infobox{
+  opacity: 0; 
+  visibility: hidden; 
+  position: absolute;
+  top: calc(80% + 12px);
+  left: 50%;
+  transform: translateX(-50%) scale(0.9); 
+  transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out, visibility 0.1s ease-in-out;
+  background-color: white;
+  color: rgb(138, 0, 192);
+  padding: 8px;
+  border-radius: 4px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+  white-space: nowrap;
+}
+
+.material-icon:hover > .infobox{
+  opacity: 1; 
+  visibility: visible; 
+}
+
+
+
+.profile-button-container {
+  position: absolute;
+  top: 16px; 
+  right: 16px; 
+  z-index: 1000;
+}
+
+.profile-button {
+  background-color: #A64DFF;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 12px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.profile-button:hover {
+  background-color: #8A3BCC;
+}
+
+.profilebox{
+  color: #A64DFF;
+}
